--- a/app.json
+++ b/app.json
@@ -9,6 +9,6 @@
         }
     },
     "website": "https://starts.sh",
-    "repository": "https://github.com/yeahwu/kinto",
+    "repository": "https://github.com/cyc0203/kinto",
     "stack": "container"
 }
